@@ -1,7 +1,9 @@
 = <<< %menu%
+%last-update %"R"[menu 更新]
+
  %"e"[速記] %"c"[新規] %"D"[複製] 検索(%"s"[固定] %"g"[正規] %"m"[roma] %"o"[バ内]) %":"[昨日] %"."[今日]
  %"a"[一覧] %"l"[最近] %"A"[前後] %"h"[履歴] %"y"[予定] %"t"[Todo] %"b"[全バ] %"x"[mark] %"w"[酔歩] [設定]
- %"K"[題↑] [名↑] %"d"[日↓] %"T"[時↓] %"i"[鍵↓] %"r"[更新] %"R"[menu 更新] [menu 編集] [全消]
+ %"K"[題↑] [名↑] %"d"[日↓] %"T"[時↓] %"i"[鍵↓] %"r"[更新] [menu 編集] [全消]
 -------------------------------------
 [予定・Todo] … 予定@, 〆切! を %sdays 日先まで表示.
 〆切!, todo+, 覚書-, 保留~ を上位 %tnum 個まで表示.
